# SpotSweeper-MCP

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  DOCKER_HUB_README.md  Dockerfile  Dockerfile.debug  README.md  README_API_BRIDGE.md  README_PRODUCTION.md  calculator_server.R  debug-docker.sh  debug_api.R  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  spotseeker-mcp-docker  spotseeker_api.R  spotseeker_bridge.py  spotseeker_native.R  test-docker.sh  test_minimal.sh
.github/workflows/: docker-publish.yml
api/: spotseeker_api.R
data/: README.md
docs/: fastmcp.txt  test_r_mcp_repomix.md
old/: README_API_BRIDGE.md  check_gene_names_detail.R  check_testdata.R  check_testdata2.R  spotseeker_api_simple.R  spotseeker_server.py  start.sh  test_api_direct.py  test_api_gene_detection.py  test_api_simple.R  test_bridge.py  test_fixed_detection.R  test_gene_symbol_detection.R  test_gene_symbol_standalone.R  test_middleware.R  test_part1.R  test_simple.py  test_spotseeker.py  test_updated_detection.R
qc_results/: qc_summary.rds
test/: README.md  TESTING.md  test_docker.sh  test_example.md
test_output/pipeline/: qc_summary.rds
